# RaphLib

./: .gitignore  __init__.py  fastkit.py  functions.py  graph.py  helpers.py  main.py  prompts.py  pyproject.toml  test.ipynb
graph/: __init__.py  base.py  prebuilt.py
raphlib/: __init__.py  functions.py  helpers.py  prompts.py  setup.py  tools.py
src/: __init__.py  events.py  functions.py  helpers.py  prompts.py  setup.py  stables.py  stream.py  tools.py
src/examples/: fastkit_test.py  func_test.py  main.py  simplest_graph.py  stateless_graph_clients.ipynb  stream_test.py
src/examples/alternatives/: persistent_graph_class.py
src/examples/utility/: async_conversation.py
src/fastkit/: chat_models.py  setup_env.py
src/raphlib/: __init__.py  chat.py  functions.py  helpers.py  parsers.py  stables.py  stream.py
src/raphlib/graph/: __init__.py  base.py  client.py  edges.py  graph.py  prebuilt.py  state.py
src/raphlib/tools/: __init__.py  kit.py  tool.py
src/raphlib_graph/: __init__.py  base.py  prebuilt.py
test/: fastkit_test.py  func_test.py  graph.py  stream_test.py
testing/utility/: blank_graph.py
utility/: async_conversation.py  blank_graph.py
