[tool.poetry]
name = "RaphLib"
version = "0.1.0"
description = "Library for easily running structured LLM calls and managing complex prompts. Based on pydantic and langchain."
authors = ["Raphael Nguyen <raph.nyn@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = "^2.10.0"
langchain-openai = "^0.2.11"
langchain = "^0.3.10"
langgraph = "^0.2.56"
python-dotenv = "^1.0.1"

[tool.poetry.dev-dependencies]
# Add any dev-specific dependencies here, like linters, formatters, or testing libraries.

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"