[project]
name = "RaphLib"
version = "0.1.0"
description = "Library for easily running structured LLM calls and managing complex prompts. Based on pydantic and langchain."
authors = [{ name = "Raphael Nguyen", email = "raph.nyn@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic<=2.7.4",
    "openai>=1.63.2,<2.0.0",
    "langchain-openai>=0.3.6,<0.4.0",
    "langgraph>=0.2.74,<0.3.0",
    "langchain>=0.3.19",
    "python-dotenv>=1.0.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/raphlib"]

[tool.hatch.build.targets.wheel]
include = ["src/raphlib"]

[tool.hatch.build.targets.wheel.sources]
"src/raphlib" = "raphlib"
